[B]0.1.8[/B]
- Addon splitted into script module and service module for better compatibility

[B]0.1.7[/B]
- lower delay values reimplemented

[B]0.1.4[/B]
- smaller improvements

[B]0.1.3[/B]
- Key delay redefined
- improved communication handling

[B]0.1.2[/B]
- Default code sequences redefined

[B]0.1.0[/B]
  - Second release
  - extended settings
  - user defined key codes
  - adjustable key delay

[B]0.0.2[/B]
  - Improved setup handling

[B]0.0.1[/B]
  - Initial version