@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.lgtv.remote" name="LG Smart TV 3D Switch" version="0.1.8" provider-name="Birger Jesch">
+<addon id="service.lgtv.remote" name="LG Smart TV 3D Switch" version="0.1.9" provider-name="Birger Jesch">
   <extension point="xbmc.service" library="default.py" start="login" />
   <extension point="xbmc.python.script" library="scan.py" />
   <extension point="xbmc.addon.metadata">
