@@ -1,3 +1,7 @@
+[B]0.1.9[/B]
+- Command sequence of 3D Mode now depends from selected/current view mode instead of filename convention
+  This prevents from switching to view modes defined by filename if user select other view mode as suggested
+
 [B]0.1.8[/B]
 - Addon splitted into script module and service module for better compatibility
 
